[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ui/camera_ui.gd" type="Script" id=1]

[node name="camera_ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="left" type="Control" parent="."]
anchor_bottom = 1.0
margin_right = 30.0
mouse_filter = 1

[node name="right" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -30.0
mouse_filter = 1

[node name="up" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 30.0
mouse_filter = 1

[node name="down" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -30.0
mouse_filter = 1
[connection signal="mouse_entered" from="left" to="." method="_on_left_mouse_entered"]
[connection signal="mouse_exited" from="left" to="." method="_on_left_mouse_exited"]
[connection signal="mouse_entered" from="right" to="." method="_on_right_mouse_entered"]
[connection signal="mouse_exited" from="right" to="." method="_on_right_mouse_exited"]
[connection signal="mouse_entered" from="up" to="." method="_on_up_mouse_entered"]
[connection signal="mouse_exited" from="up" to="." method="_on_up_mouse_exited"]
[connection signal="mouse_entered" from="down" to="." method="_on_down_mouse_entered"]
[connection signal="mouse_exited" from="down" to="." method="_on_down_mouse_exited"]
